<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>cash.muro</groupId>
	<artifactId>muro-parent-pom</artifactId>
	<version>0.1.0-alpha2</version>
	<packaging>pom</packaging>

	<name>Muro.Cash Parent POM</name>
	<description>Parent POM for Muro.Cash projects</description>
	<url>https://github.com/murocash/parent-pom</url>

	<developers>
		<developer>
			<name>Muro.Cash</name>
			<url>https://muro.cash</url>
		</developer>
	</developers>

	<licenses>
		<license>
			<name>GNU General Public License, Version 2</name>
			<url>https://www.gnu.org/licenses/old-licenses/gpl-2.0.txt</url>
		</license>
	</licenses>

	<properties>
		<revision>0.1.0-alpha2</revision>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<lombok.version>1.18.16</lombok.version>
		<gpg.keyname>985B27F8FC8D6E62</gpg.keyname>
		<java.version>11</java.version>
		<junit.jupiter.version>5.7.0</junit.jupiter.version>
		<spring.security.version>5.4.2</spring.security.version>
	</properties>
	
	<scm>
		<connection>scm:git@github.com:murocash/muro.cash.git</connection>
		<developerConnection>scm:git@github.com:murocash/parent-pom.git
		</developerConnection>
		<url>https://github.com/murocash/parent-pom</url>
	</scm>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/
			</url>
		</repository>
	</distributionManagement>

	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
				<configuration>
        <argLine>
            --illegal-access=permit
        </argLine>
        	</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.22.2</version>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<sourcepath>${delombok.output}</sourcepath>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>1.6</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
						<configuration>
							<keyname>${gpg.keyname}</keyname>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok-maven-plugin</artifactId>
				<version>${lombok.version}.0</version>
				<configuration>
					<sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
					<outputDirectory>${project.basedir}/target/delombok</outputDirectory>
					<addOutputDirectory>false</addOutputDirectory>
				</configuration>
				<executions>
					<execution>
						<phase>generate-sources</phase>
						<goals>
							<goal>delombok</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.8</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>muro</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>